Introduce a new Jet type (EigenJet) to Ceres that uses expression templates.  Interestingly, this Jet offers a ~10% speedup when compiled/benchmarked inside google3, but a slowdown when compiled via Ceres' build system and benchmarked using Sameer's benchmark harness.  As the size of the Jet increases, the speedup typically increases.
Ceres build system benchmarks:

New jet.h:
$ ./bin/autodiff_timing
time per execution: 7.31125e-06

Old jet.h:
 $ ./bin/autodiff_timing
time per execution: 6.87108e-06

google3 benchmarks:

Benchmark                                   Time(ns)    CPU(ns) Iterations
--------------------------------------------------------------------------
BM_SnavelyReprojectionError_CeresJet            1767       1765    3664921
BM_SnavelyReprojectionError_EigenJet            1654       1652    4242424

Change-Id: Iab6420e7d59c0d6878e1fde3429d2f0070820744

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -51,6 +51,10 @@ ADD_EXECUTABLE(simple_bundle_adjuster
                simple_bundle_adjuster.cc)
 TARGET_LINK_LIBRARIES(simple_bundle_adjuster ceres)
 
+ADD_EXECUTABLE(autodiff_timing
+               autodiff_timing.cc)
+TARGET_LINK_LIBRARIES(autodiff_timing ceres)
+
 IF (GFLAGS)
   ADD_EXECUTABLE(powell powell.cc)
   TARGET_LINK_LIBRARIES(powell ceres)
